--- a/index.html
+++ b/index.html
@@ -837,7 +837,7 @@
                     <h2 class="section-title">Como funciona o acesso ao KIT</h2>
                 </div>
                 <div class="flex justify-center">
-                    <img src="https://raw.githubusercontent.com/atividadesbiblicas/kit-completo/refs/heads/main/Acesso.png" alt="Como funciona o acesso ao KIT" class="access-image">
+                    <img src="https://raw.githubusercontent.com/atividadesbiblicas/kit-completo/refs/heads/main/CHEGAR%20TRANSPARENTE.png" alt="Como funciona o acesso ao KIT" class="access-image">
                 </div>
             </div>
 
@@ -850,22 +850,22 @@
                 </div>
                 <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
                     <div class="feature-card">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS4gA1FexSO5LGes4WS2UVK7jdknMLh7VlewrGlLA8IZzbzSpS7" alt="Ícone" class="kit-image">
+                        <img src="https://raw.githubusercontent.com/atividadesbiblicas/kit-completo/refs/heads/main/1.png" alt="Ícone" class="kit-image">
                     </div>
                     <div class="feature-card">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS4gA1FexSO5LGes4WS2UVK7jdknMLh7VlewrGlLA8IZzbzSpS7" alt="Ícone" class="kit-image">
+                        <img src="https://raw.githubusercontent.com/atividadesbiblicas/kit-completo/refs/heads/main/2.png" alt="Ícone" class="kit-image">
                     </div>
                     <div class="feature-card">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS4gA1FexSO5LGes4WS2UVK7jdknMLh7VlewrGlLA8IZzbzSpS7" alt="Ícone" class="kit-image">
+                        <img src="https://raw.githubusercontent.com/atividadesbiblicas/kit-completo/refs/heads/main/3.png" alt="Ícone" class="kit-image">
                     </div>
                     <div class="feature-card">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS4gA1FexSO5LGes4WS2UVK7jdknMLh7VlewrGlLA8IZzbzSpS7" alt="Ícone" class="kit-image">
+                        <img src="https://raw.githubusercontent.com/atividadesbiblicas/kit-completo/refs/heads/main/4.png" alt="Ícone" class="kit-image">
                     </div>
                     <div class="feature-card">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS4gA1FexSO5LGes4WS2UVK7jdknMLh7VlewrGlLA8IZzbzSpS7" alt="Ícone" class="kit-image">
+                        <img src="https://raw.githubusercontent.com/atividadesbiblicas/kit-completo/refs/heads/main/5.png" alt="Ícone" class="kit-image">
                     </div>
                     <div class="feature-card">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS4gA1FexSO5LGes4WS2UVK7jdknMLh7VlewrGlLA8IZzbzSpS7" alt="Ícone" class="kit-image">
+                        <img src="https://raw.githubusercontent.com/atividadesbiblicas/kit-completo/refs/heads/main/6.png" alt="Ícone" class="kit-image">
                     </div>
                 </div>
             </div>
@@ -879,17 +879,17 @@
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                     <div class="perfect-for-card">
-                        <img src="https://raw.githubusercontent.com/atividadesbiblicas/kit-completo/refs/heads/main/para-Crian%C3%A7as%20de%203%20a%2010%20anos.png" alt="Crianças de 3 a 10 anos" class="perfect-for-img">
+                        <img src="https://raw.githubusercontent.com/atividadesbiblicas/kit-completo/refs/heads/main/TRASNPARENTE%20-%20Professora%20de%20Refor%C3%A7o%20Escolar%20(3).png" alt="Crianças de 3 a 10 anos" class="perfect-for-img">
                         <h3 class="font-bold text-xl mb-2">Crianças de 3 a 10 anos</h3>
                         <p>Atividades adaptadas para diferentes idades</p>
                     </div>
                     <div class="perfect-for-card">
-                        <img src="https://raw.githubusercontent.com/atividadesbiblicas/kit-completo/refs/heads/main/para-Professora%20de%20Educa%C3%A7%C3%A3o%20infantil.png" alt="Professores de Educação Infantil" class="perfect-for-img">
+                        <img src="https://raw.githubusercontent.com/atividadesbiblicas/kit-completo/refs/heads/main/TRASNPARENTE%20-%20Professora%20de%20Refor%C3%A7o%20Escolar%20(2).png" alt="Professores de Educação Infantil" class="perfect-for-img">
                         <h3 class="font-bold text-xl mb-2">Professores de Educação Infantil</h3>
                         <p>Material complementar para aulas</p>
                     </div>
                     <div class="perfect-for-card">
-                        <img src="https://raw.githubusercontent.com/atividadesbiblicas/kit-completo/refs/heads/main/para-Professora%20de%20Refor%C3%A7o%20Escolar.png" alt="Professores de Reforço Escolar" class="perfect-for-img">
+                        <img src="https://raw.githubusercontent.com/atividadesbiblicas/kit-completo/refs/heads/main/TRASNPARENTE%20-%20Professora%20de%20Refor%C3%A7o%20Escolar.png" alt="Professores de Reforço Escolar" class="perfect-for-img">
                         <h3 class="font-bold text-xl mb-2">Professores de Reforço Escolar</h3>
                         <p>Recursos para ensino personalizado</p>
                     </div>
