--- a/index.html
+++ b/index.html
@@ -906,19 +906,19 @@
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                     <div class="bonus-card">
                         <!-- Substitua o src pela URL da sua imagem -->
-                        <img src="https://via.placeholder.com/150" alt="Colorindo com Propósito" class="bonus-image">
+                        <img src="https://raw.githubusercontent.com/atividadesbiblicas/kit-completo/refs/heads/main/bonus-colorindo%20com%20proposito.png" alt="Colorindo com Propósito" class="bonus-image">
                         <h3 class="font-bold text-xl mb-2">COLORINDO COM PROPÓSITO</h3>
                         <p>Livro de colorir com mensagens bíblicas para crianças</p>
                     </div>
                     <div class="bonus-card">
                         <!-- Substitua o src pela URL da sua imagem -->
-                        <img src="https://via.placeholder.com/150" alt="Aprendendo com Alegria" class="bonus-image">
+                        <img src="https://raw.githubusercontent.com/atividadesbiblicas/kit-completo/refs/heads/main/bonus-.png" alt="Aprendendo com Alegria" class="bonus-image">
                         <h3 class="font-bold text-xl mb-2">APRENDENDO COM ALEGRIA</h3>
                         <p>Jogos educativos para desenvolvimento cognitivo</p>
                     </div>
                     <div class="bonus-card">
                         <!-- Substitua o src pela URL da sua imagem -->
-                        <img src="https://via.placeholder.com/150" alt="Aprendendo a Orar" class="bonus-image">
+                        <img src="https://raw.githubusercontent.com/atividadesbiblicas/kit-completo/refs/heads/main/bonus-aprendendo%20a%20orar.png" alt="Aprendendo a Orar" class="bonus-image">
                         <h3 class="font-bold text-xl mb-2">APRENDENDO A ORAR</h3>
                         <p>Guia ilustrado de orações para crianças</p>
                     </div>
