--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
                 </div>
                 
                 <!-- Botão de compra que aparece após 10 segundos -->
-                <div id="buyButton" class="hidden-button show-button">
+                <div id="buyButton" class="https://pay.kiwify.com.br/RECcxEI">
                     <a href="#" class="cta-button inline-block">Quero Transformar o Aprendizado do Meu Filho</a>
                 </div>
             </div>
@@ -951,7 +951,7 @@
                     </ul>
                 </div>
                 
-                <a href="#" class="cta-button inline-block mt-6 bounce">Quero Garantir Meu Kit Agora</a>
+                <a href="https://pay.kiwify.com.br/RECcxEI" class="cta-button inline-block mt-6 bounce">Quero Garantir Meu Kit Agora</a>
             </div>
 
             <div class="divider"></div>
