--- a/index.html
+++ b/index.html
@@ -901,7 +901,7 @@
             <!-- Bônus -->
             <div class="mb-12 highlight-section scroll-reveal">
                 <div class="text-center mb-8">
-                    <h2 class="section-title">COMPRANDO HOJE VOCÊ GANHA MAIS ESTES BÔNUS:</h2>
+                    <h2 class="section-title">COMPRANDO HOJE VOCÊ GANHA MAIS ESTÁ OFERTA  BÔNUS:</h2>
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                     <div class="bonus-card">
