--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
                 
                 <!-- Botão de compra que aparece após 10 segundos -->
                 <div id="buyButton" class="https://pay.kiwify.com.br/RECcxEI">
-                    <a href="#" class="cta-button inline-block">Quero Transformar o Aprendizado do Meu Filho</a>
+                    <a href="https://pay.kiwify.com.br/RECcxEI" class="cta-button inline-block">Quero Transformar o Aprendizado do Meu Filho</a>
                 </div>
             </div>
 
