--- a/index.html
+++ b/index.html
@@ -813,7 +813,7 @@
                     conexão enquanto ensina valores cristãos e habilidades essenciais.
                 </p>
                 <p class="text-lg mb-6">
-                    Composto por mais de 400 atividades desenvolvidas por educadores
+                    Composto por mais de 600 atividades desenvolvidas por educadores
                     Cristãos, o Kids Cristão oferece tudo o que é necessário para envolver
                     e educar crianças de forma lúdica e eficaz.
                 </p>
@@ -821,10 +821,10 @@
                 <!-- Imagens de apoio -->
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mt-8">
                     <div class="flex justify-center">
-                        <img src="https://raw.githubusercontent.com/atividadesbiblicas/kit-completo/refs/heads/main/apoio%201.png" alt="Apoio 1" class="max-w-full h-auto rounded-lg shadow-lg hover:scale-105 transition-transform duration-300">
+                        <img src="https://raw.githubusercontent.com/atividadesbiblicas/kit-completo/refs/heads/main/um%20pouco1.png" alt="Apoio 1" class="max-w-full h-auto rounded-lg shadow-lg hover:scale-105 transition-transform duration-300">
                     </div>
                     <div class="flex justify-center">
-                        <img src="https://raw.githubusercontent.com/atividadesbiblicas/kit-completo/refs/heads/main/apoio%202.png" alt="Apoio 2" class="max-w-full h-auto rounded-lg shadow-lg hover:scale-105 transition-transform duration-300">
+                        <img src="https://raw.githubusercontent.com/atividadesbiblicas/kit-completo/refs/heads/main/um%20pouco2.png" alt="Apoio 2" class="max-w-full h-auto rounded-lg shadow-lg hover:scale-105 transition-transform duration-300">
                     </div>
                 </div>
             </div>
@@ -942,12 +942,12 @@
                 <div class="bg-white bg-opacity-80 rounded-xl p-6 mt-6 mb-6 text-left">
                     <h3 class="text-xl font-bold mb-4 text-center">O QUE VOCÊ VAI RECEBER:</h3>
                     <ul class="offer-list">
-                        <li>+400 atividades Bíblicas: Leve o material para divertir seu pequeno enquanto aprende o que é eterno</li>
-                        <li>Bônus #1: Colorindo com Propósito</li>
-                        <li>Bônus #2: Aprendendo com Alegria</li>
-                        <li>Bônus #3: Aprendendo a orar</li>
+                        <li>+600 atividades Bíblicas: Leve o material para divertir seu pequeno enquanto aprende o que é eterno</li>
+                        <li>Bônus oferta especial #1: Colorindo com Propósito</li>
+                        <li>Bônus ferta especial #2: Aprendendo com Alegria</li>
+                        <li>Bônus ferta especial #3: Aprendendo a orar</li>
+                        <li>Bônus surpesa ao adquirir Agora</li>
                         <li>Acesso Vitalício</li>
-                        <li>7 dias de Garantia</li>
                     </ul>
                 </div>
                 
